--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -69,14 +69,15 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 2
+    gaps_out = 2
 
-    border_size = 2
+    border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.active_border = rgba(6700ffaa) rgba(7a00ffaa) 45deg
+    #col.active_border = rgba(6700ffaa) rgba(7a00ffaa) 45deg
+    col.active_border = rgb(7aa2f7) rgb(7dcfff) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -301,3 +302,4 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
